fix: remove warnings & not resolved deps in tests